Update Frontened Design And added some extra features

--- a/frontend/src/styles/ServicesSection.css
+++ b/frontend/src/styles/ServicesSection.css
@@ -1,7 +1,6 @@
-/* src/components/ServicesSection.css */
-
+/* src/styles/ServicesSection.css */
 .services-section {
-  background-color: #f8f9fa; /* light gray */
+  background-color: #f8f9fa;
 }
 
 .service-card {
